gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      tier: web
  template:
    metadata:
      labels:
        app: backend
        tier: web
    spec:
      serviceAccountName: backend
      containers:
      - image: gcr.io/cloudsql-docker/gce-proxy:1.17
        imagePullPolicy: Always
        name: cloud-sql-proxy
        command:
          - "/cloud_sql_proxy"
        args:
          - "-instances=above-the-clouds-app:us-central1:$(DB_ADDRESS)=tcp:5432"
        securityContext:
          runAsNonRoot: true
      - image: gcr.io/above-the-clouds-app/backend:1.0.1
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 8080
          name: web-app-port
        - containerPort: 8000
          name: socket-port
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
