gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
    tier: web
  ports:
    - port: 80
      targetPort: 8080
