gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: above-the-clouds-ip
  labels:
    app: backend
spec:
  backend:
    serviceName: backend
    servicePort: 80
